tdf#168979 survive broken color percentile scales

Change-Id: I3180d08272fd7355987f63f5379a044d98467cf0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192836
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>