sc/inc/colorscale.hxx
@@ -256,7 +256,7 @@ private:
     double GetMaxValue() const;
 
     void calcMinMax(double& nMin, double& nMax) const;
-    double CalcValue(double nMin, double nMax, const ScColorScaleEntries::const_iterator& rItr) const;
+    std::optional<double> CalcValue(double nMin, double nMax, const ScColorScaleEntries::const_iterator& rItr) const;
 public:
     SC_DLLPUBLIC ScColorScaleFormat(ScDocument* pDoc);
     ScColorScaleFormat(ScDocument* pDoc, const ScColorScaleFormat& rFormat);
@@ -327,8 +327,8 @@ public:
     void EnsureSize();
 
 private:
-    double getMin(double nMin, double nMax) const;
-    double getMax(double nMin, double nMax) const;
+    std::optional<double> getMin(double nMin, double nMax) const;
+    std::optional<double> getMax(double nMin, double nMax) const;
 
     std::unique_ptr<ScDataBarFormatData> mpFormatData;
 };
@@ -408,7 +408,7 @@ private:
 
     double GetMinValue() const;
     double GetMaxValue() const;
-    double CalcValue(double nMin, double nMax, const ScIconSetFormat::const_iterator& itr) const;
+    std::optional<double> CalcValue(double nMin, double nMax, const ScIconSetFormat::const_iterator& itr) const;
 
     std::unique_ptr<ScIconSetFormatData> mpFormatData;
 };
